实现功能： 1、汇总缺勤人数 2、获取所有班级列表 3、学生加入班级 4、老师设置限时考勤 5、学生通过签到码限时签到
