# api/http/user/user_http_http.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-http. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-http v2.8.2
-// - protoc             v3.20.3
+// - protoc-gen-go-http v2.7.2
+// - protoc             v4.25.0
 // source: http/user/user_http.proto
 
 package user
@@ -24,7 +24,6 @@ const OperationUserList = "/http.user.User/List"
 const OperationUserListUserByPage = "/http.user.User/ListUserByPage"
 const OperationUserLogin = "/http.user.User/Login"
 const OperationUserRegister = "/http.user.User/Register"
-const OperationUserStudentSign = "/http.user.User/StudentSign"
 
 type UserHTTPServer interface {
 	GetCurrentUser(context.Context, *GetCurrentUserRequest) (*GetCurrentUserReply, error)
@@ -34,8 +33,6 @@ type UserHTTPServer interface {
 	Login(context.Context, *LoginRequest) (*LoginReply, error)
 	// Register 用户注册
 	Register(context.Context, *RegisterRequest) (*RegisterReply, error)
-	// StudentSign学生签到
-	StudentSign(context.Context, *StudentSignRequest) (*StudentSignReply, error)
 }
 
 func RegisterUserHTTPServer(s *http.Server, srv UserHTTPServer) {
@@ -45,7 +42,6 @@ func RegisterUserHTTPServer(s *http.Server, srv UserHTTPServer) {
 	r.POST("/v1/user/list", _User_List0_HTTP_Handler(srv))
 	r.POST("/v1/user/getuser", _User_GetCurrentUser0_HTTP_Handler(srv))
 	r.POST("/v1/user/listbypage", _User_ListUserByPage0_HTTP_Handler(srv))
-	r.POST("/v1/user/studentsign", _User_StudentSign0_HTTP_Handler(srv))
 }
 
 func _User_Register0_HTTP_Handler(srv UserHTTPServer) func(ctx http.Context) error {
@@ -158,35 +154,12 @@ func _User_ListUserByPage0_HTTP_Handler(srv UserHTTPServer) func(ctx http.Contex
 	}
 }
 
-func _User_StudentSign0_HTTP_Handler(srv UserHTTPServer) func(ctx http.Context) error {
-	return func(ctx http.Context) error {
-		var in StudentSignRequest
-		if err := ctx.Bind(&in); err != nil {
-			return err
-		}
-		if err := ctx.BindQuery(&in); err != nil {
-			return err
-		}
-		http.SetOperation(ctx, OperationUserStudentSign)
-		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
-			return srv.StudentSign(ctx, req.(*StudentSignRequest))
-		})
-		out, err := h(ctx, &in)
-		if err != nil {
-			return err
-		}
-		reply := out.(*StudentSignReply)
-		return ctx.Result(200, reply)
-	}
-}
-
 type UserHTTPClient interface {
 	GetCurrentUser(ctx context.Context, req *GetCurrentUserRequest, opts ...http.CallOption) (rsp *GetCurrentUserReply, err error)
 	List(ctx context.Context, req *ListRequest, opts ...http.CallOption) (rsp *ListReply, err error)
 	ListUserByPage(ctx context.Context, req *ListUserByPageRequest, opts ...http.CallOption) (rsp *ListUserByPageReply, err error)
 	Login(ctx context.Context, req *LoginRequest, opts ...http.CallOption) (rsp *LoginReply, err error)
 	Register(ctx context.Context, req *RegisterRequest, opts ...http.CallOption) (rsp *RegisterReply, err error)
-	StudentSign(ctx context.Context, req *StudentSignRequest, opts ...http.CallOption) (rsp *StudentSignReply, err error)
 }
 
 type UserHTTPClientImpl struct {
@@ -207,7 +180,7 @@ func (c *UserHTTPClientImpl) GetCurrentUser(ctx context.Context, in *GetCurrentU
 	if err != nil {
 		return nil, err
 	}
-	return &out, nil
+	return &out, err
 }
 
 func (c *UserHTTPClientImpl) List(ctx context.Context, in *ListRequest, opts ...http.CallOption) (*ListReply, error) {
@@ -220,7 +193,7 @@ func (c *UserHTTPClientImpl) List(ctx context.Context, in *ListRequest, opts ...
 	if err != nil {
 		return nil, err
 	}
-	return &out, nil
+	return &out, err
 }
 
 func (c *UserHTTPClientImpl) ListUserByPage(ctx context.Context, in *ListUserByPageRequest, opts ...http.CallOption) (*ListUserByPageReply, error) {
@@ -233,7 +206,7 @@ func (c *UserHTTPClientImpl) ListUserByPage(ctx context.Context, in *ListUserByP
 	if err != nil {
 		return nil, err
 	}
-	return &out, nil
+	return &out, err
 }
 
 func (c *UserHTTPClientImpl) Login(ctx context.Context, in *LoginRequest, opts ...http.CallOption) (*LoginReply, error) {
@@ -246,7 +219,7 @@ func (c *UserHTTPClientImpl) Login(ctx context.Context, in *LoginRequest, opts .
 	if err != nil {
 		return nil, err
 	}
-	return &out, nil
+	return &out, err
 }
 
 func (c *UserHTTPClientImpl) Register(ctx context.Context, in *RegisterRequest, opts ...http.CallOption) (*RegisterReply, error) {
@@ -259,18 +232,5 @@ func (c *UserHTTPClientImpl) Register(ctx context.Context, in *RegisterRequest, 
 	if err != nil {
 		return nil, err
 	}
-	return &out, nil
-}
-
-func (c *UserHTTPClientImpl) StudentSign(ctx context.Context, in *StudentSignRequest, opts ...http.CallOption) (*StudentSignReply, error) {
-	var out StudentSignReply
-	pattern := "/v1/user/studentsign"
-	path := binding.EncodeURL(pattern, in, false)
-	opts = append(opts, http.Operation(OperationUserStudentSign))
-	opts = append(opts, http.PathTemplate(pattern))
-	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return &out, nil
+	return &out, err
 }
