# internal/data/model/sign.gen.go
@@ -12,14 +12,12 @@ const TableNameSign = "sign"
 
 // Sign 签到表
 type Sign struct {
-	ID          int64      `gorm:"column:id;primaryKey;autoIncrement:true;comment:主键" json:"id"`                          // 主键
-	CreateTime  time.Time  `gorm:"column:create_time;not null;default:CURRENT_TIMESTAMP;comment:创建时间" json:"create_time"` // 创建时间
-	UpdateTime  time.Time  `gorm:"column:update_time;not null;default:CURRENT_TIMESTAMP;comment:更新时间" json:"update_time"` // 更新时间
-	DeleteAt    *time.Time `gorm:"column:delete_at;comment:逻辑删除标记" json:"delete_at"`                                      // 逻辑删除标记
-	CourseName  string     `gorm:"column:course_name;not null;comment:课程名称" json:"course_name"`                           // 课程名称
-	SignTime    int32      `gorm:"column:sign_time;not null;comment:签到限时" json:"sign_time"`                               // 签到限时
-	Student     string     `gorm:"column:student;not null;comment:学生总表（json 数组）" json:"student"`                          // 学生总表（json 数组）
-	StudentSign string     `gorm:"column:student_sign;not null;comment:已经签到的学生表（json 数组）" json:"student_sign"`            // 已经签到的学生表（json 数组）
+	ID         int64      `gorm:"column:id;primaryKey;autoIncrement:true;comment:主键" json:"id"`                          // 主键
+	CreateTime time.Time  `gorm:"column:create_time;not null;default:CURRENT_TIMESTAMP;comment:创建时间" json:"create_time"` // 创建时间
+	UpdateTime time.Time  `gorm:"column:update_time;not null;default:CURRENT_TIMESTAMP;comment:更新时间" json:"update_time"` // 更新时间
+	DeleteAt   *time.Time `gorm:"column:delete_at;comment:逻辑删除标记" json:"delete_at"`                                      // 逻辑删除标记
+	AttendName string     `gorm:"column:attend_name;not null;comment:签到" json:"attend_name"`                             // 签到
+	SignTime   int32      `gorm:"column:sign_time;not null;comment:签到限时" json:"sign_time"`                               // 签到限时
 }
 
 // TableName Sign's table name
